force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/MELCRMOPETOOL__MELGITCRM_Inquiry__c.object-meta.xml
<CustomObject>
    <label>問い合わせ</label>
    <nameField>
        <displayFormat>I-{0000000}</displayFormat>
        <label>問い合わせ番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>