force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Answer__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Answer__c</fullName>
    <label>回答</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>