force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Classification__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Classification__c</fullName>
    <label>問合せ分類</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>質問</fullName>
            </value>
            <value>
                <fullName>意見</fullName>
            </value>
            <value>
                <fullName>要望</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>