force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevClassfication__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevClassfication__c</fullName>
    <label>開発分類</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>標準開発</fullName>
            </value>
            <value>
                <fullName>カスタム開発</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>