force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevPlanDate__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevPlanDate__c</fullName>
    <label>開発完了予定日</label>
    <type>Date</type>
</CustomField>