force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevPriority__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevPriority__c</fullName>
    <label>開発優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>