force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevReleaseResource__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevReleaseResource__c</fullName>
    <label>リリース資材</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>