force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevReps__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevReps__c</fullName>
    <label>開発担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>