force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevResult__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevResult__c</fullName>
    <label>開発結果</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>