force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevRevDeadline__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevRevDeadline__c</fullName>
    <label>レビュー完了期日</label>
    <type>Date</type>
</CustomField>