force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DevStatus__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DevStatus__c</fullName>
    <label>開発ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
                <default>true</default>
                <label>新規</label>
            </value>
            <value>
                <fullName>対応待ち</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>対応済（レビュー待ち）</fullName>
            </value>
            <value>
                <fullName>レビュー却下</fullName>
            </value>
            <value>
                <fullName>レビュー済み</fullName>
            </value>
            <value>
                <fullName>リリース済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>