force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Division__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Division__c</fullName>
    <defaultValue>$User.Division</defaultValue>
    <label>所属</label>
    <length>255</length>
    <type>Text</type>
</CustomField>