force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DocFaqCreate__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DocFaqCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>要FAQ化</label>
    <type>Checkbox</type>
</CustomField>