force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DocFaqDone__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DocFaqDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FAQ作成済</label>
    <type>Checkbox</type>
</CustomField>