force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DocMemo__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DocMemo__c</fullName>
    <label>ドキュメント備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>