force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DocOperationDocDone__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DocOperationDocDone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>運用資料反映済</label>
    <type>Checkbox</type>
</CustomField>