force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__DocOperationDocUpdate__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__DocOperationDocUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>要運用資料反映</label>
    <type>Checkbox</type>
</CustomField>