force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__FirstRespnseTime__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__FirstRespnseTime__c</fullName>
    <description>日付/時間値間の経過時間を確認する
https://help.salesforce.com/articleView?id=formula_examples_dates.htm&amp;type=5</description>
    <formula>IF(
MELCRMOPETOOL__TimeStampStatus4__c - MELCRMOPETOOL__TimeStampStatus3__c &gt; 0 ,
TEXT( FLOOR( MELCRMOPETOOL__TimeStampStatus4__c - MELCRMOPETOOL__TimeStampStatus3__c ) ) &amp; &quot; days &quot;
&amp; TEXT( ROUND( MOD( (MELCRMOPETOOL__TimeStampStatus4__c - MELCRMOPETOOL__TimeStampStatus3__c ) * 24, 24 ), 0 ) ) &amp; &quot; hours &quot;,
&quot;&quot;
)</formula>
    <label>初回回答時間</label>
    <type>Text</type>
</CustomField>