force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__FirstRespnseTimeForAnalytics__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__FirstRespnseTimeForAnalytics__c</fullName>
    <formula>( MELCRMOPETOOL__TimeStampStatus4__c - MELCRMOPETOOL__TimeStampStatus3__c ) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>初回回答時間_集計用</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>