force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Function__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Function__c</fullName>
    <label>機能分類</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MELCRMOPETOOL__Function</valueSetName>
    </valueSet>
</CustomField>