force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrAnswer__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrAnswer__c</fullName>
    <label>運用管理回答</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>