force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrDevVolume__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrDevVolume__c</fullName>
    <label>開発規模</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>大</fullName>
            </value>
            <value>
                <fullName>中</fullName>
            </value>
            <value>
                <fullName>小</fullName>
            </value>
            <value>
                <fullName>軽微</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>