force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrExecPlanDate__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrExecPlanDate__c</fullName>
    <label>対応予定日</label>
    <type>Date</type>
</CustomField>