force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrFunction__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrFunction__c</fullName>
    <label>対応機能分類</label>
    <length>255</length>
    <type>Text</type>
</CustomField>