force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrManhour__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrManhour__c</fullName>
    <label>工数(人日)</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>