force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrMemo__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrMemo__c</fullName>
    <label>運用管理備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>