force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrPolicy__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrPolicy__c</fullName>
    <label>対応方針</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>課題</fullName>
            </value>
            <value>
                <fullName>内容再確認</fullName>
            </value>
            <value>
                <fullName>回答のみ</fullName>
            </value>
            <value>
                <fullName>SFDC仕様 対応不可能</fullName>
            </value>
            <value>
                <fullName>機能修正（改善作業対応）</fullName>
            </value>
            <value>
                <fullName>機能追加（次フェーズ以降対応）</fullName>
            </value>
            <value>
                <fullName>対応見送り（現状機能の使用）</fullName>
            </value>
            <value>
                <fullName>対応見送り（次フェーズ以降対応）</fullName>
            </value>
            <value>
                <fullName>対応実施（機能関連以外）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>