force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__OpeMgrReps__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__OpeMgrReps__c</fullName>
    <label>運用管理担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>