force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Priority__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Priority__c</fullName>
    <inlineHelpText>対応期限の目安。質問・意見の場合は[高]4時間、[中]1日、[低]期限無し。要望の場合は[高]30日、[中]60日、[低]期限無し。</inlineHelpText>
    <label>優先度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>高</fullName>
            </value>
            <value>
                <fullName>中</fullName>
                <default>true</default>
                <label>中</label>
            </value>
            <value>
                <fullName>低</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>