force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Private__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Private__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>チェックを入れると、管理者以外のユーザーへ対し非表示となります。</inlineHelpText>
    <label>非公開希望</label>
    <type>Checkbox</type>
</CustomField>