force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__ReleaseConfirmDate__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__ReleaseConfirmDate__c</fullName>
    <label>リリース確認日</label>
    <type>Date</type>
</CustomField>