force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__ReleaseDate__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__ReleaseDate__c</fullName>
    <label>リリース予定日</label>
    <type>Date</type>
</CustomField>