force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__ReleaseFlosumNum__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__ReleaseFlosumNum__c</fullName>
    <label>Flosumリリース番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>