force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Satisfaction__c</fullName>
    <label>満足度</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MELCRMOPETOOL__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5.期待以上</fullName>
            </value>
            <value>
                <fullName>4.不備なし</fullName>
            </value>
            <value>
                <fullName>3.軽微な不備あり</fullName>
            </value>
            <value>
                <fullName>2.中程度の不備あり</fullName>
            </value>
            <value>
                <fullName>1.大きな不備あり</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>