force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__SatisfactionForAnalytics__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__SatisfactionForAnalytics__c</fullName>
    <formula>VALUE (LEFT( TEXT(MELCRMOPETOOL__Satisfaction__c) ,1))</formula>
    <label>満足度_集計用</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>