force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Status__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status1</fullName>
                <default>true</default>
                <label>1.新規</label>
            </value>
            <value>
                <fullName>Status2</fullName>
                <label>2.窓口確認済</label>
            </value>
            <value>
                <fullName>Status3</fullName>
                <label>3.運用1次回答済</label>
            </value>
            <value>
                <fullName>Status4</fullName>
                <label>4.対応方針決定</label>
            </value>
            <value>
                <fullName>Status5</fullName>
                <label>5.リリース待ち</label>
            </value>
            <value>
                <fullName>Status6</fullName>
                <label>6.運用対応済</label>
            </value>
            <value>
                <fullName>Status7</fullName>
                <label>7.起票者へ回答済</label>
            </value>
            <value>
                <fullName>Status8</fullName>
                <label>8.取り下げ</label>
            </value>
            <value>
                <fullName>Status9</fullName>
                <label>9.完了</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>