force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__TimeStampStatus2__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__TimeStampStatus2__c</fullName>
    <label>タイムスタンプ(Status2)</label>
    <type>DateTime</type>
</CustomField>