force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__TimeStampStatus3__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__TimeStampStatus3__c</fullName>
    <label>タイムスタンプ(Status3)</label>
    <type>DateTime</type>
</CustomField>