force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__TimeStampStatus4__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__TimeStampStatus4__c</fullName>
    <label>タイムスタンプ(Status4)</label>
    <type>DateTime</type>
</CustomField>