force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__Title__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__Title__c</fullName>
    <label>件名</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>