force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__UATApproveDateTime__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__UATApproveDateTime__c</fullName>
    <label>UAT承認日時</label>
    <type>DateTime</type>
</CustomField>