force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__UATApprover__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__UATApprover__c</fullName>
    <label>UAT承認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>