force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/fields/MELCRMOPETOOL__UnsatisfactionReason__c.field-meta.xml
<CustomField>
    <fullName>MELCRMOPETOOL__UnsatisfactionReason__c</fullName>
    <label>不満足理由</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>MELCRMOPETOOL__Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>品質の悪さ</fullName>
            </value>
            <value>
                <fullName>納期の遅れ</fullName>
            </value>
            <value>
                <fullName>コミュニケーションの不備</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>