force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/listViews/MELCRMOPETOOL__MELGITCRM_ALL_INQUIRY.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__MELGITCRM_ALL_INQUIRY</fullName>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>MELCRMOPETOOL__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MELCRMOPETOOL__Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>MELCRMOPETOOL__OpeMgrAnswer__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>C-1.共通（全データ）</label>
</ListView>