force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/listViews/MELCRMOPETOOL__MELGITCRM_FAQ_MAKE.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__MELGITCRM_FAQ_MAKE</fullName>
    <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>MELCRMOPETOOL__DocFaqCreate__c</columns>
    <columns>MELCRMOPETOOL__DocFaqDone__c</columns>
    <columns>MELCRMOPETOOL__DocOperationDocUpdate__c</columns>
    <columns>MELCRMOPETOOL__DocOperationDocDone__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MELCRMOPETOOL__DocFaqCreate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>MELCRMOPETOOL__DocFaqDone__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>MELCRMOPETOOL__DocOperationDocUpdate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>MELCRMOPETOOL__DocOperationDocDone__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>C-4.共通（FAQ作成対象）</label>
</ListView>