force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/listViews/MELCRMOPETOOL__MELGITCRM_MADOGUCHI.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__MELGITCRM_MADOGUCHI</fullName>
    <booleanFilter>1 OR (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>MELCRMOPETOOL__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MELCRMOPETOOL__Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MELCRMOPETOOL__Status__c</field>
        <operation>equals</operation>
        <value>Status1,Status3,Status6,Status7</value>
    </filters>
    <filters>
        <field>MELCRMOPETOOL__Status__c</field>
        <operation>equals</operation>
        <value>Status4</value>
    </filters>
    <filters>
        <field>MELCRMOPETOOL__DevStatus__c</field>
        <operation>equals</operation>
        <value>対応済（レビュー待ち）</value>
    </filters>
    <label>A-1.部門管理者（全データ）</label>
</ListView>