force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/listViews/MELCRMOPETOOL__MELGITCRM_MADOGUCHI_2_NEW.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__MELGITCRM_MADOGUCHI_2_NEW</fullName>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>MELCRMOPETOOL__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MELCRMOPETOOL__Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MELCRMOPETOOL__Status__c</field>
        <operation>equals</operation>
        <value>Status1</value>
    </filters>
    <label>A-2.部門管理者（新規分）</label>
</ListView>