force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/listViews/MELCRMOPETOOL__MELGITCRM_OPERATION.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__MELGITCRM_OPERATION</fullName>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>MELCRMOPETOOL__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MELCRMOPETOOL__Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MELCRMOPETOOL__Status__c</field>
        <operation>equals</operation>
        <value>Status2,Status3,Status4,Status5</value>
    </filters>
    <label>B-1.システム管理者（全データ）</label>
</ListView>