force-app/main/default/objects/MELCRMOPETOOL__MELGITCRM_Inquiry__c/listViews/MELCRMOPETOOL__MELGITCRM_OPERATION_4_TOBEDEVELOP.listView-meta.xml
<ListView>
    <fullName>MELCRMOPETOOL__MELGITCRM_OPERATION_4_TOBEDEVELOP</fullName>
    <columns>NAME</columns>
    <columns>MELCRMOPETOOL__Title__c</columns>
    <columns>MELCRMOPETOOL__Content__c</columns>
    <columns>MELCRMOPETOOL__Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>MELCRMOPETOOL__Priority__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MELCRMOPETOOL__Status__c</field>
        <operation>equals</operation>
        <value>Status4</value>
    </filters>
    <filters>
        <field>MELCRMOPETOOL__DevStatus__c</field>
        <operation>equals</operation>
        <value>新規,対応待ち</value>
    </filters>
    <label>B-4.システム管理者（改善対応待ち）</label>
</ListView>